--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body style="margin:0; padding:0; background:#fff;">
-  <img src="image.JPG" style="display:block; max-width:100%; height:auto; margin:0 auto;">
+  <img src="image.jpg" style="display:block; max-width:100%; height:auto; margin:0 auto;">
 </body>
 </html>
